Issue#29: Fix - getUsers Api should accept Org Id along with status
